k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loginserver
  labels:
    app: loginserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loginserver
  template:
    metadata:
      labels:
        app: loginserver
    spec:
      containers:
        - name: loginserver
          image: yklee2002/loginserver:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: loginserver-service
  labels:
    app: loginserver
spec:
  type: NodePort
  selector:
    app: loginserver
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30114
